# edm-anfis-ann-modelling

./: .gitignore  README.md  anfis.py  anfis_ngo.py  ann.py  ann_ngo.py  benchmark_ngo.py  build.py  build_models.py  experiment.py  model_types.py  optimize_hybrid_ngo.py  predict-gui.py  predict.py  pyproject.toml  research_plotter.py  taska_i.py  taska_ii_dataset1.py  taska_ii_dataset2.py  validation_plotter.py
anfis/: __init__.py  _model.py  types.py
ann/: __init__.py  _model.py  experiment.py  metrics.py  types.py
datasets/: dataset1.csv  dataset2.csv  titanium_ti-6ai-4v.csv
models/: dataset1_ANFIS_CPU_model.pkl  dataset1_ANFIS_model.pkl  dataset1_ANN_CPU_model.pkl  dataset1_ANN_model.pkl  dataset1_model.pkl  dataset2_ANFIS_CPU_model.pkl  dataset2_ANFIS_model.pkl  dataset2_ANFIS_model_CPU.pkl  dataset2_ANFIS_model_GPU.pkl  dataset2_ANFIS_model_less.pkl  dataset2_ANFIS_model_less_1.pkl  dataset2_ANFIS_model_less_2.pkl  dataset2_ANN_CPU_model.pkl  dataset2_ANN_model.pkl  dataset2_model.pkl  titanium_ti_6ai_4v_model.pkl
models/NGO Models/: dataset2_ANFIS_NGO_model_CPU.pkl  (+1 more)
practices/: ann_practice.py  generate_dataset2.py  predict_cli.py  test001.py
research_docs/: dataset 1.docx
results/: .~lock.dataset2_model_results.xlsx#  dataset1_ANFIS_CPU_model_results.xlsx  dataset1_ANN_CPU_model_results.xlsx  dataset1_model_results.csv  dataset1_model_results.xlsx  dataset1_results2.csv  dataset2_ANFIS_CPU_model_results.xlsx  dataset2_ANN_CPU_model_results.xlsx  dataset2_model_results.csv  dataset2_model_results.xlsx  my_new_model_results.csv
(+4 files in other folders)
